--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,12 +4,15 @@
   <title>Inicio</title>
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <!--<link rel="stylesheet" href="style/styleCss.css"/>-->
+  <!-- Bootstrap JS (Optional if you don't need dropdown functionality) -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-U1m7GzCp5TzAuAMrh2o7j2jcVBxU6PA0TkSlHNf6zJkStqyf3W8KhVy7xkUEfviB" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-  <!-- Chart.js -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </head>
 <body>
 
@@ -19,9 +22,12 @@
     <div class="ml-auto">
       <a href="/novoevento" class="btn btn-primary" role="button">Novo Evento</a>
       <a href="/eventos" class="btn btn-secondary" role="button">Eventos</a>
+      <a href="/usuariosForm" class="btn btn-secondary" role="button">Usuarios</a>
     </div>
   </nav>
 </header>
+
+
 
 </body>
 </html>
