--- a/src/main/resources/templates/eventos.html
+++ b/src/main/resources/templates/eventos.html
@@ -24,16 +24,16 @@
     // FILTROS DA TABELA
   $(document).ready(function() {
   $('#tabela-eventos').DataTable({
-    "language": {
-      "url": "//cdn.datatables.net/plug-ins/1.11.0/i18n/Portuguese-Brasil.json" // Tradução para o Português do Brasil
-    },
+
   });
 });
 
 $(document).ready(function() {
     $("#btnDownload").click(function() {
       $.get("/eventosJs", function(data) {
-        const csv = Papa.unparse(data);
+        const csv = Papa.unparse(data, {
+          delimiter: ";", // Defina o delimitador para ponto e vírgula
+        });
         const blob = new Blob([csv], { type: "text/csv" });
         const url = URL.createObjectURL(blob);
         const a = document.createElement("a");
@@ -112,6 +112,6 @@ $(document).ready(function() {
         </div>
 
     </div>
-    </section>
+</section>
 </body>
 </html>
