--- a/src/main/resources/templates/eventoForm.html
+++ b/src/main/resources/templates/eventoForm.html
@@ -139,7 +139,7 @@
                     <div class="input-group-prepend">
                         <label class="input-group-text" for="setorOcorrencia">Setor da Ocorrência</label>
                     </div>
-                    <select class="custom-select" id="setorOcorrencia" name="setorOcorrencia" required>
+                    <select class="custom-select" id="setorOcorrencia" name="setorOcorrencia.setor" required>
                        <!-- Os dados serão preenchidos dinamicamente aqui -->
                     </select>
                 </div>
@@ -149,7 +149,7 @@
                     <div class="input-group-prepend">
                         <label class="input-group-text" for="setorNotificante">Setor do Notificante</label>
                     </div>
-                    <select class="custom-select" id="setorNotificante" name="setorNotificante" required>
+                    <select class="custom-select" id="setorNotificante" name="setorNotificante.setor" required>
                         <!-- Os dados serão preenchidos dinamicamente aqui -->
                     </select>
                 </div>
