--- a/src/main/resources/templates/Setores.html
+++ b/src/main/resources/templates/Setores.html
@@ -44,10 +44,10 @@
 
     <div class="input-group mb-0">
       <div class="input-group-prepend">
-        <label class="input-group-text" for="setor" ><span>Nome do setor: </span></label>
+        <label class="input-group-text" ><span>Nome do setor: </span></label>
       </div>
-      <input type="text" disabled class="form-control" id="setor" placeholder="Nome do novo setor" style="margin-right: 5px;" name="setor" required>
-      <button type="submit" disabled class="btn btn-primary">Salvar</button>
+      <input type="text" class="form-control"placeholder="Nome do novo setor" style="margin-right: 5px;" name="setor" required>
+      <button type="submit"  class="btn btn-primary">Salvar</button>
     </div>
   </form>
 
