--- a/src/main/resources/templates/config.html
+++ b/src/main/resources/templates/config.html
@@ -28,6 +28,9 @@
         <li class="nav-item">
             <a class="nav-link" href="/setoresConfig">Setores</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/eventosConfig">Tipos de Eventos</a>
+        </li>
     </ul>
 
 </header>
