--- a/src/main/resources/templates/gerenciarEventos.html
+++ b/src/main/resources/templates/gerenciarEventos.html
@@ -25,7 +25,16 @@
     </div>
   </nav>
 
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link " href="/eventos">Eventos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="/gerenciar">Gerenciar</a>
+    </li>
+  </ul>
 
+</header>
   <div class="container" style="padding-top: 50px;">
   <div class="row">
     <div class="col-md-6">
@@ -153,7 +162,7 @@
   });
 </script>
 
-</header>
+
 
 </body>
 </html>
