--- a/src/main/resources/templates/gerenciarEventos.html
+++ b/src/main/resources/templates/gerenciarEventos.html
@@ -33,7 +33,20 @@
       <a class="nav-link active" href="/gerenciar">Gerenciar</a>
     </li>
   </ul>
-
+  <ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link" href="/setoresConfig">Setores</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/eventosConfig">Eventos</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/processoConfig">Processos</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/problemaConfig">Problemas</a>
+  </li>
+  </ul>
 </header>
   <div class="container" style="padding-top: 50px;">
   <div class="row">
