--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,13 +20,15 @@
   <nav class="navbar navbar-dark bg-dark">
     <a href="/"><span class="navbar-brand mb-0 h1" style="font-weight: bold;" th:text="${config.nomeSite}">HBPS</span></a>
     <div class="ml-auto">
-      <a href="/novoevento" class="btn btn-primary" role="button">Novo Evento</a>
-      <a href="/eventos" class="btn btn-secondary" role="button">Eventos</a>
-      <a href="/config" class="btn btn-secondary" role="button">Configurações</a>
+      <a href="/novoevento" class="btn btn-primary" role="button">Novo Evento Adverso</a>
     </div>
   </nav>
 </header>
 
+<div class="container" style="margin-top: 25px">
+  <a href="/informatica"><button type="button" class="btn btn-info">Informatica</button></a>
+  <a href="/eventos"><button type="button" class="btn btn-info">Eventos Adversos</button></a>
+</div>
 
 
 </body>
