--- a/src/main/resources/templates/config.html
+++ b/src/main/resources/templates/config.html
@@ -12,24 +12,19 @@
     <nav class="navbar navbar-dark bg-dark">
         <a href="/"><span class="navbar-brand mb-0 h1" style="font-weight: bold;" th:text="${config.nomeSite}">HBPS</span></a>
         <div class="ml-auto">
-            <a href="/novoevento" class="btn btn-primary" role="button">Novo Evento</a>
-            <a href="/eventos" class="btn btn-secondary" role="button">Eventos</a>
-            <a href="/config" class="btn btn-secondary" role="button">Configurações</a>
+            <a href="/novoevento" class="btn btn-primary" role="button">Novo Evento Adverso</a>
         </div>
     </nav>
 
     <ul class="nav nav-tabs">
         <li class="nav-item">
+            <a class="nav-link" href="/informatica">Informatica</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link active" href="/config">Configurações</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/usuarios">Usuarios</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/setoresConfig">Setores</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/eventosConfig">Tipos de Eventos</a>
         </li>
     </ul>
 
